@@ -427,6 +427,7 @@ class Mosquitto:
         self.on_log = None
         self._host = ""
         self._port = 1883
+        self._bind_address = ""
         self._in_callback = False
         self._strict_protocol = False
         self._callback_mutex = threading.Lock()
@@ -528,7 +529,7 @@ class Mosquitto:
         self._tls_version = tls_version
         self._tls_ciphers = ciphers
 
-    def connect(self, host, port=1883, keepalive=60):
+    def connect(self, host, port=1883, keepalive=60, bind_address=""):
         """Connect to a remote broker.
 
         host is the hostname or IP address of the remote broker.
@@ -539,10 +540,10 @@ class Mosquitto:
         broker. If no other messages are being exchanged, this controls the
         rate at which the client will send ping messages to the broker.
         """
-        self.connect_async(host, port, keepalive)
+        self.connect_async(host, port, keepalive, bind_address)
         return self.reconnect()
 
-    def connect_async(self, host, port=1883, keepalive=60):
+    def connect_async(self, host, port=1883, keepalive=60, bind_address=""):
         """Connect to a remote broker asynchronously. This is a non-blocking
         connect call that can be used with loop_start() to provide very quick
         start.
@@ -565,6 +566,7 @@ class Mosquitto:
         self._host = host
         self._port = port
         self._keepalive = keepalive
+        self._bind_address = bind_address
 
         self._state_mutex.acquire()
         self._state = mosq_cs_connect_async
@@ -608,7 +610,7 @@ class Mosquitto:
         self._messages_reconnect_reset()
 
         try:
-            self._sock = socket.create_connection((self._host, self._port))
+            self._sock = socket.create_connection((self._host, self._port), source_address=(self._bind_address, 0))
         except socket.error as err:
             (msg) = err
             if msg.errno != errno.EINPROGRESS:
